--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "url": "git+https://github.com/obounce/1app-node-api-library.git"
   },
   "keywords": [
+    "1app",
+    "1app package",
+    
     "1app nodeJS",
     "1app NPM",
     "oneapp-node",
